fix hover preview label visibility when horizontally scrolled

--- a/src/options/FormatOptsEditor/content/Custom.module.css
+++ b/src/options/FormatOptsEditor/content/Custom.module.css
@@ -119,7 +119,7 @@
           background-color: #00000038;
         }
 
-        .preview:hover & {
+        .previewScroll:hover & {
           opacity: 0;
         }
       }
